--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         style="display: block; margin: 0 auto; width: 50px; height: 50px"
       />
       <p
-        style="
-          font-family: inherit;
+        style="font-family: 'brandon-grotesque', sans-serif;
           margin-top: 20px;
           font-size: 16px;
           text-transform: uppercase;
